# hatl2ee-scraper

./: README.md  commands.md  docker-compose.yml  main.py  pyproject.toml  train_model.py
crawler/: find_api.py
dashboard/: app.py
dashboard/pages/: 1_Buyer_Insights.py  2_Seller_Insights.py  3_Price_Predictor.py
data/: CarDocument.py
pipeline/: etl.py  run.py
