[project]
name = "noon-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "openai>=2.30.0",
    "pandas>=3.0.2",
    "playwright>=1.58.0",
    "playwright-stealth>=2.0.3",
    "prefect>=3.6.25",
    "pymongo>=4.16.0",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "streamlit>=1.56.0",
]
